...
            app:srcCompat="@drawable/ic_action_delete"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content" android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/label_field_edit"
                android:minWidth="64dp"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:hint="label"
        />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content" android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/value_field_edit"
                android:minWidth="64dp"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:hint="value"
        />
    </com.google.android.material.textfield.TextInputLayout>

...
