...
    <string name="unzip_pass_dialog_title">Opening Passbook</string>
    <string name="unzip_pass_dialog_message">Please wait…</string>
    <string name="action_update">update</string>
    <string name="no_calendar_app_found">No Calendar-App found</string>
    <string name="pass_updated">Pass Updated</string>
    <string name="expiration_date_to_calendar_warning_message">You are about to add the expiration-date to the calendar - If you think there is a better date in this pass - please send it to me - PassAndroid needs to know where this</string>
    <string name="expiration_date_to_calendar_warning_title">Add Expiration-Date</string>
    <string name="topic_trash">trash</string>
    <string name="topic_new">new</string>
    <string name="topic_archive">archive</string>
    <string name="move_to_new_topic">Move to new Topic</string>
    <string name="categories_nav">%d Categories</string>
    <string name="passes_nav">%d Passes</string>
    <string name="found_pass">found: %s</string>
    <string name="found__pass">And %d more</string>
    <string name="scan_finished_dialog_title">Scan finished.</string>
    <string name="scan_finished_dialog_text">found %d passes</string>
...
