<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="16dp"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/new_topic_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_topic_input_hint"
                android:inputType="text"
                android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_topic_suggestions"/>

    <LinearLayout
            android:id="@+id/topic_suggestions_button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>

</LinearLayout>